2006-05-08  Sergei Gavrikov  <sg@belvok.com>

	* src/lpc2xxx.misc (hal_hardware_init): Call HAL_PLF_HARDWARE_INIT
	for any platform specific initialization.

2006-02-14  Andy Jackson <andy@grapevinetech.co.uk>

	* cdl/hal_arm_lpc2xxx.cdl: Added CYGHWR_HAL_ARM_LPC2XXX_FAMILY,
	CYGNUM_HAL_ARM_LPC2XXX_VPBDIV, CYGNUM_HAL_ARM_LPC2XXX_XCLKDIV
	and CYGHWR_HAL_ARM_LPC2XXX_IDLE_PWRSAVE. Changed 
	CYGHWR_HAL_ARM_LPC2XXX_EXTINT_ERRATA to a bool.
	* include/hal_var_ints.h: Removed lpc2xxx misc functions and
	added an include for lpc2xxx_misc.h to avoid breaking things.
	* include/lpc2xxx_misc.h: New header file for all the lpc2xxx
	miscellaneous functions.
	* include/var_arch.h: Made idle powerdown CDL controlled.
	* include/var_io.h: Changed to use family CDL variables.
	* src/lpc2xxx_misc.c: Changes to interrupt and VPBDIV code.

2004-09-12  Jani Monoses <jani@iv.ro>

	* src/hal_diag.c: 
	* src/lpc2xxx_misc.c: 
	* include/plf_stub.h: 
	* include/var_io.h: 
	* include/var_arch.h: 
	* include/hal_var_ints.h: 
	* include/hal_diag.h: 
	* include/hal_cache.h: 
	* cdl/hal_arm_lpc2xxx.cdl: New port - based on AT91 variant.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2004 eCosCentric Limited 
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//